; ModuleID = '/home/carl/AnghaBench/libui/_abort/windowevents/extr_unix_window.c_uiNewWindow.c'
source_filename = "/home/carl/AnghaBench/libui/_abort/windowevents/extr_unix_window.c_uiNewWindow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@w = common dso_local global %struct.TYPE_4__* null, align 8
@.str = private unnamed_addr constant [16 x i8] c"configure-event\00", align 1
@onConfigure = common dso_local global i32 0, align 4
@defaultOnPositionContentSizeChanged = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @uiNewWindow(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** @w, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @onConfigure, align 4
  %14 = call i32 @G_CALLBACK(i32 %13)
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** @w, align 8
  %16 = call i32 @g_signal_connect(i32 %12, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %14, %struct.TYPE_4__* %15)
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** @w, align 8
  %18 = load i32, i32* @defaultOnPositionContentSizeChanged, align 4
  %19 = call i32 @uiWindowOnPositionChanged(%struct.TYPE_4__* %17, i32 %18, i32* null)
  %20 = load i32*, i32** %5, align 8
  ret i32* %20
}

declare dso_local i32 @g_signal_connect(i32, i8*, i32, %struct.TYPE_4__*) #1

declare dso_local i32 @G_CALLBACK(i32) #1

declare dso_local i32 @uiWindowOnPositionChanged(%struct.TYPE_4__*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
